--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "essensplaner",
     "version": "0.1.0",
     "private": true,
-    "homepage": "/essensplaner",
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
@@ -10,13 +9,11 @@
         "@mui/icons-material": "^5.14.1",
         "@mui/material": "^5.14.2",
         "date-fns": "^2.30.0",
-        "pg": "^8.11.1",
         "react": "^18.2.0",
         "react-beautiful-dnd": "^13.1.1",
         "react-dom": "^18.2.0",
         "react-scripts": "^5.0.1",
-        "uuid": "^9.0.0",
-        "web-vitals": "^3.4.0"
+        "uuid": "^9.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -45,12 +42,11 @@
     "devDependencies": {
         "@types/jest": "^29.5.3",
         "@types/node": "^20.4.5",
-        "@types/pg": "^8.10.2",
         "@types/react": "^18.2.17",
         "@types/react-beautiful-dnd": "^13.1.4",
         "@types/react-dom": "^18.2.7",
         "@types/uuid": "^9.0.2",
-        "react-error-overlay": "6.0.9",
-        "typescript": "^5.1.6"
+        "typescript": "^5.1.6",
+        "@babel/plugin-proposal-private-property-in-object": "latest"
     }
 }
