--- a/default.env
+++ b/default.env
@@ -1,3 +1,4 @@
-REACT_APP_BACKEND_HOST="localhost"
-REACT_APP_BACKEND_PORT=3001
-REACT_APP_BACKEND_PATH="/api"
+REACT_APP_HOST=localhost
+REACT_APP_PORT=80
+REACT_APP_API_PATH=/api
+REACT_APP_STORAGE_PATH=/usr/essensplaner/storage/
