--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "essensplaner",
+    "name": "essensplaner_frontend",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
