--- a/default.env
+++ b/default.env
@@ -1,4 +1,5 @@
-REACT_APP_HOST=localhost
-REACT_APP_PORT=80
-REACT_APP_API_PATH=/api
-REACT_APP_STORAGE_PATH=/usr/essensplaner/storage/
+ESSENSPLANER_HOST=localhost
+ESSENSPLANER_PORT=80
+ESSENSPLANER_API_PATH=/api
+ESSENSPLANER_STORAGE_PATH=/usr/essensplaner/storage/
+ESSENSPLANER_VERSION=1.0
